[MessageTray] notification size/wrapping fixes
Make the font match the panel.
Make the max width be em-based rather than screen-size-based.
Fix it to break lines mid-word if needed.

https://bugzilla.gnome.org/show_bug.cgi?id=606755

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -561,12 +561,14 @@ StTooltip {
 }
 
 #notification {
+    font-size: 16px;
     border-radius: 5px;
     background: rgba(0,0,0,0.9);
     color: white;
     padding: 2px 10px 10px 10px;
     spacing-rows: 5px;
     spacing-columns: 10px;
+    max-width: 40em;
 }
 
 #notification-actions {
